--- a/src/App.css
+++ b/src/App.css
@@ -2224,3 +2224,74 @@ input[type="datetime-local"]::-webkit-datetime-edit-second-field {
 .balance-item {
   color: #888;
 }
+
+/* Add text alignment for each column header */
+.holder-col {
+  font-family: monospace;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.holder-col.address {
+  text-align: left;
+}
+
+.holder-col.percent {
+  text-align: right;
+}
+
+.holder-col.name {
+  text-align: left;
+}
+
+.holder-col.balance {
+  text-align: right;
+}
+
+.holder-col.sol {
+  text-align: right;
+}
+
+.holder-col.usdc {
+  text-align: right;
+}
+
+.holder-col.message {
+  text-align: center;
+}
+
+/* Update column header alignment */
+.holder-header .holder-col {
+  font-family: monospace;
+  font-weight: bold;
+  color: #888;
+}
+
+.holder-header .holder-col.address {
+  text-align: left;
+}
+
+.holder-header .holder-col.percent {
+  text-align: right;
+}
+
+.holder-header .holder-col.name {
+  text-align: left;
+}
+
+.holder-header .holder-col.balance {
+  text-align: right;
+}
+
+.holder-header .holder-col.sol {
+  text-align: right;
+}
+
+.holder-header .holder-col.usdc {
+  text-align: right;
+}
+
+.holder-header .holder-col.message {
+  text-align: center;
+}
